--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-swipeable-list": "^1.7.2",
     "sass": "^1.58.3"
   },
   "devDependencies": {
